Fixed bug #36158 (SIGTERM is not handled correctly when running as a FastCGI server)